--- a/Atividade01/contato.html
+++ b/Atividade01/contato.html
@@ -27,19 +27,20 @@
                     
                     <form>
                         <label for="nome">Nome:</label> <br />
-                        <input type="text" id="nome" />
-                        <br />
+                        <input type="text" id="nome" onkeyup='validaNome()'/>
+                        <div id="textoNome"></div>
                         <br />
                         <form>
                         <label for="email">E-mail:</label> <br />
-                        <input type="email" id="email" />
-                        <br />
+                        <input type="email" id="email" onkeyup="validaEmail()"/>
+                        <div id="textoEmail"></div>
                         <br />
                         <label for="assunto">Assunto:</label> <br />
-                        <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+                        <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup="validaAssunto()"></textarea>
+                        <div id='textoAssunto'></div>
                         <br />
                         <br />
-                        <button>Enviar</button>
+                        <button onclick="enviar()">Enviar</button>
                     </form>
                 </div>
 
@@ -52,7 +53,10 @@
                         height="400"
                         style="border:0;"
                         allowfullscreen=""
-                        loading="lazy">
+                        loading="lazy" 
+                        onmousemove="mapaZoom()"
+                        onmouseout="mapaNormal()"
+                        id="mapa">
                     </iframe>
                 </div>
 
@@ -72,5 +76,8 @@
 
             <p class="center">&copy; Rebeca Marques - 2022</p>
         </footer>
+
+    <script src="./assets/js/script.js"></script>
+
 </body>
 </html>
